    * 0949 quicksearch: now able to search for multiple hosts at once...
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output

    WATO:
    * 0825 WATO: Hover menu of user online state shows the last seen date/time now
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 1004 FIX: Fix exception when saving rules, caused by empty item
    * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
    * 0826 FIX: Fixed problem where user access times were not updated correctly
    * 1044 FIX: Remove icon for service parameters in WATO service list for missing services...

    Notifications:
    * 1042 Rule based notifications: allow matching on host groups...
    * 0828 FIX: Mails sent with mail/asciimail plugin now really set the from address

    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service

    HW/SW-Inventory:
    * 0625 hw/sw inventory now reads the kernel version and architecture for linux and windows
    * 0627 lnx_video, win_video: added inventory function and agent for linux video cards, modified windows inventory function
    * 0629 improvements to windows sw/hw inventory (encoding, more details for sw inventory)
    * 0630 win_disks: hardware inventory for physical disks in windows
    * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
    * 1005 FIX: Fix exception when using pretty-print output format
    * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...


1.2.5i4:
    Core & Setup: