@@ -46,6 +46,7 @@
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
     * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
     * 1036 FIX: doc/treasures/downtime: fix --url option, better error output
+    * 1074 FIX: Fix Virtual Host Tree snapin...
 
     WATO:
     * 0825 WATO: Hover menu of user online state shows the last seen date/time now
